prac4 all scenarios works